# shortcuts-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  biome.json  btca.config.jsonc  loop_claude.sh  loop_codex.sh  loop_gemini.sh  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: mcp-tool-schema-notes.md  mcp-tools-list-output.md  prd-get-available-actions.md  shortcut-creation-findings.md
scripts/: ci.sh
specs/: README.md  migration-to-ts-sdk.md  parity-validation-runbook.md  tool-parity-checklist.md
src/: config.ts  database.ts  executor.ts  index.ts  parser.ts  server.ts
src/shortcuts_mcp/: __init__.py  actions.py  builder.py  config.py  database.py  executor.py  models.py  parser.py  references.py  server.py
src/shortcuts_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shortcuts_mcp/data/: curated_actions.json
src/tools/: get_available_actions.ts  get_folders.ts  list_shortcuts.ts  schemas.ts
src/ts/: actions.ts  config.ts  database.ts  executor.ts  index.ts  parser.ts  server.ts  types.ts  vendor.d.ts
src/ts/tools/: get_available_actions.ts  get_folders.ts  (+5 more)
tests/: actions.test.ts  config.test.ts  database.test.ts  executor.test.ts  parser.test.ts  server.test.ts  test_actions.py  test_builder.py  test_create_shortcut.py  test_parser.py  test_references.py  tool_schemas.test.ts
tests/ts/: actions.test.ts  config.test.ts  database.test.ts  executor.test.ts  parser.test.ts  server.test.ts  tool_schemas.test.ts
