[project]
name = "shortcuts-mcp"
version = "0.1.0"
description = "MCP server for macOS Shortcuts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Logan Pritchett" }]
license = { text = "MIT" }
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
  "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "basedpyright>=1.18.0",
  "ruff>=0.5.0",
]

[project.scripts]
shortcuts-mcp = "shortcuts_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
